# NLP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ChunkArray.h  ChunkArray.hpp  EditDistance.h  EditDistance.hpp  SuggestItem.h  SuggestItem.hpp  SuggestionStage.h  SuggestionStage.hpp  SymSpellCheck.h  SymSpellCheck.hpp  Transfer.h  Transfer.hpp  VTM.h  VTM.hpp
old_segment/: BKtree.cpp  BKtree.h  DP.cpp  DP.h  TM.cpp  TM.h
src/: EditDistance.cc  EditDistance.cpp  SuggestItem.cc  SuggestItem.cpp  SuggestionStage.cc  SuggestionStage.cpp  SymSpellCheck.cc  SymSpellCheck.cpp  Transfer.cc  Transfer.cpp  VTM.cc  VTM.cpp  expanded.txt
test/: main.cc
