cmake_minimum_required(VERSION 2.8)
project(Linux-OCR)
set(DEMO_SRC "test/main.cc")
set(INCLUDE "include")
set(SOURCE "src")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O2 -Wno-sign-compare")
file(GLOB INCL "include/*.hpp")
file(GLOB SRC "src/*.cc")
include_directories(${INCLUDE} ${SOURCE})
add_executable(main ${DEMO_SRC} ${INCL} ${SRC})
